fix: - home render followed post -post card width -gap in postcard

--- a/app/globals.css
+++ b/app/globals.css
@@ -123,10 +123,8 @@
   }
 
   .post-card{
-    @apply flex bg-white rounded-lg shadow-lg py-4 px-5 max-md:px-3 min-w-[350px] 
-    max-w-[600px] justify-center items-center
-
-    
+    @apply flex w-full bg-white rounded-lg shadow-lg py-4 px-5 max-md:px-3 min-w-[350px] 
+    max-w-[600px] justify-center items-center    
   }
 }
 
